test(review): cover null/skip branches and capture catch path
Co-authored-by: Cursor <cursoragent@cursor.com>